--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
 
 dependencies:
   firebase_analytics: ^12.0.3
+  firebase_auth: ^6.1.1
   firebase_core: ^4.2.0
   flutter:
     sdk: flutter
