--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   firebase_core: ^4.2.0
   flutter:
     sdk: flutter
+  google_sign_in: ^6.1.5
 
 dev_dependencies:
   flutter_lints: ^5.0.0
