--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  cloud_firestore: ^6.1.0
   firebase_analytics: ^12.0.3
   firebase_auth: ^6.1.1
   firebase_core: ^4.2.0
